# flask-server/swagger_server/models/user_message.py
@@ -1,0 +1,93 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.message import Message
+from swagger_server.models.user import User
+
+from swagger_server import util
+
+
+class UserMessage(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, user: User=None, message: Message=None):  # noqa: E501
+        """UserMessage - a model defined in Swagger
+
+        :param user: The user of this UserMessage.  # noqa: E501
+        :type user: User
+        :param message: The message of this UserMessage.  # noqa: E501
+        :type message: Message
+        """
+        self.swagger_types = {
+            'user': User,
+            'message': Message
+        }
+
+        self.attribute_map = {
+            'user': 'User',
+            'message': 'Message'
+        }
+
+        self._user = user
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserMessage':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UserMessage of this UserMessage.  # noqa: E501
+        :rtype: UserMessage
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user(self) -> User:
+        """Gets the user of this UserMessage.
+
+
+        :return: The user of this UserMessage.
+        :rtype: User
+        """
+        return self._user
+
+    @user.setter
+    def user(self, user: User):
+        """Sets the user of this UserMessage.
+
+
+        :param user: The user of this UserMessage.
+        :type user: User
+        """
+
+        self._user = user
+
+    @property
+    def message(self) -> Message:
+        """Gets the message of this UserMessage.
+
+
+        :return: The message of this UserMessage.
+        :rtype: Message
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: Message):
+        """Sets the message of this UserMessage.
+
+
+        :param message: The message of this UserMessage.
+        :type message: Message
+        """
+
+        self._message = message
